@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+    * Misc
+        - Depend on newer Moo, to benefit from a safer runtime (RT#93004)
+
 0.082810 2014-10-25 13:58 (UTC)
     * Fixes
         - Fix incorrect collapsing-parser source being generated in the
